--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "illuminate/cookie",
+    "name": "wpwhales/cookie",
     "description": "The Illuminate Cookie package.",
     "license": "MIT",
     "homepage": "https://laravel.com",
@@ -16,16 +16,16 @@
     "require": {
         "php": "^8.2",
         "ext-hash": "*",
-        "illuminate/collections": "^11.0",
-        "illuminate/contracts": "^11.0",
-        "illuminate/macroable": "^11.0",
-        "illuminate/support": "^11.0",
+        "wpwhales/collections": "dev-master",
+        "wpwhales/contracts": "dev-master",
+        "wpwhales/macroable": "dev-master",
+        "wpwhales/support": "dev-master",
         "symfony/http-foundation": "^6.3",
         "symfony/http-kernel": "^6.3"
     },
     "autoload": {
         "psr-4": {
-            "Illuminate\\Cookie\\": ""
+            "WPWhales\\Cookie\\": ""
         }
     },
     "extra": {
